--- a/core/static/templates/core/base/base.html
+++ b/core/static/templates/core/base/base.html
@@ -143,7 +143,7 @@
                                 <div class="d-flex flex-column px-0 m-0">
                                     <div class="d-flex flex-column px-0 m-0">
                                         <a class="menulink bg-light border border-1 py-1 ps-4" href="{% url 'feeshead_list' %}" ><i class="bi bi-link-45deg"></i> Fees Head</a></li>
-                                        <a class="menulink bg-light border border-1 py-1 ps-4" href="{% url 'create_studentfee' %}" ><i class="bi bi-link-45deg"></i> Student Fee</a></li>
+                                        <a class="menulink bg-light border border-1 py-1 ps-4" href="{% url 'studentfeelist' %}" ><i class="bi bi-link-45deg"></i> Student Fee</a></li>
                                     </div>
                                 </div>
                             </div>
