--- a/core/static/templates/feeshead/index.html
+++ b/core/static/templates/feeshead/index.html
@@ -36,6 +36,7 @@
                             <tr>
                                 <th scope="col">#</th>
                                 <th scope="col">Title</th>
+                                <th scope="col">Amount</th>
                                 <th scope="col" class="text-center">Action</th>
                               </tr>
                         </thead>
