Student Message, Show and Delete Features are completed

--- a/core/static/templates/core/base/base.html
+++ b/core/static/templates/core/base/base.html
@@ -105,7 +105,8 @@
                                     <div class="d-flex flex-column px-0 m-0">
                                         <a class="menulink bg-light border border-1 py-1 ps-4" href="{% url 'provost_notice' %}" ><i class="bi bi-link-45deg"></i> From Hall Provost</a></li>
                                         <a class="menulink bg-light border border-1 py-1 ps-4" href="{% url 'provost_notices' %}" ><i class="bi bi-link-45deg"></i> Provost Notices</a></li>
-                                        <a class="menulink bg-light border border-1 py-1 ps-4" href="{% url 'create_student' %}" ><i class="bi bi-link-45deg"></i> From Student</a></li>
+                                        <a class="menulink bg-light border border-1 py-1 ps-4" href="{% url 'student_notice' %}" ><i class="bi bi-link-45deg"></i> From Student</a></li>
+                                        <a class="menulink bg-light border border-1 py-1 ps-4" href="{% url 'student_messages' %}" ><i class="bi bi-link-45deg"></i> Student's Messages</a></li></a></li>
                                     </div>
                                 </div>
                             </div>
