Almost Everything Done for Project Show(Remaining: 1. Delete 2. Phone Number)

--- a/core/static/templates/core/base/base.html
+++ b/core/static/templates/core/base/base.html
@@ -235,10 +235,8 @@
                                 <div class="foot col-lg-2 col-md-2 col-sm-6">
                                     <h4>Support</h4>
                                     <ul class="list-unstyled">
-                                        <li><a href="#">Find My Product</a></li>
                                         <li><a href="#">Guide</a></li>
                                         <li><a href="#">FAQ</a></li>
-                                        <li><a href="#">Retailer Request</a></li>
                                     </ul>
                                 </div>
                                 <div class="foot foot2 col-lg-4 col-md-2 col-sm-6">
@@ -246,25 +244,25 @@
                                     <table border="0" class="pt-3">
                                         <tr>
                                             <th width="10%"><i class="fa fa-phone" aria-hidden="true"></i></th>
-                                            <td> +880-1779936422, +880-1316223272</td>
+                                            <td> +880-1858317498, +880-1751689434</td>
                                         </tr>
                                         <tr>
                                             <th width="10%"><i class="fa fa-envelope" aria-hidden="true"></i></th>
-                                            <td> contact_zelsoft@gmail.com, info_zelsoft@gmail.com</td>
+                                            <td> rejwanul7296@gmail.com, nurulislamopu1@gmail.com</td>
                                         </tr>
                                         <tr>
                                             <th width="10%"><i class="fa fa-map-marker" aria-hidden="true"></i></th>
-                                            <td> Gulshan Avenue, Gulshan-1, Dhaka-1212, Bangladesh</td>
+                                            <td> Tilagorh, Sylhet, Bangladesh</td>
                                         </tr>
                                     </table>
                                 </div>
                                 <div class="foot foot2 col-lg-4 col-md-4 col-sm-6">
                                     <h4>Follow Us</h4>
                                     <ul class="social-icons nav justify-content-right mt-3">
-                                        <li class="nav-item"><a class="nav-link social link" href="#"><i class="fab fa-facebook fa-2x mt-2" style="color: #5787e9" aria-hidden="true"></i></a></li>
-                                        <li class="nav-item"><a class="nav-link social link" href="#"><i class="fab fa-twitter fa-2x mt-2" style="color: #1DA1F2" aria-hidden="true"></i></a></li>
-                                        <li class="nav-item"><a class="nav-link social link" href="#"><i class="fab fa-whatsapp fa-2x mt-2" style="color: #25D366" aria-hidden="true"></i></a></li>    
-                                        <li class="nav-item"><a class="nav-link social link" href="#"><i class="fab fa-facebook-messenger fa-2x mt-2" style="color: #00B2FF" aria-hidden="true"></i></a></li>    
+                                        <li class="nav-item"><a class="nav-link social link" href="https://www.facebook.com/"><i class="fab fa-facebook fa-2x mt-2" style="color: #5787e9" aria-hidden="true"></i></a></li>
+                                        <li class="nav-item"><a class="nav-link social link" href="https://twitter.com/"><i class="fab fa-twitter fa-2x mt-2" style="color: #1DA1F2" aria-hidden="true"></i></a></li>
+                                        <li class="nav-item"><a class="nav-link social link" href="https://web.whatsapp.com/"><i class="fab fa-whatsapp fa-2x mt-2" style="color: #25D366" aria-hidden="true"></i></a></li>    
+                                        <li class="nav-item"><a class="nav-link social link" href="https://www.messenger.com/"><i class="fab fa-facebook-messenger fa-2x mt-2" style="color: #00B2FF" aria-hidden="true"></i></a></li>    
                                     </ul>
                                 </div>
                             </div>
