--- a/core/static/templates/home/index.html
+++ b/core/static/templates/home/index.html
@@ -11,7 +11,7 @@
 
     <!-- Header-->
     <header class="masthead" style="position: relative; background-color: #343a40;
-    background: url(../static/core/images/homebg.jpg) no-repeat center center; background-size: cover;
+    background: url(../static/core/images/homebg.jpeg) no-repeat center center; background-size: cover;
     padding-top: 5rem; padding-bottom: 5rem;">
         <div class="col-9 col-sm-6 px-4 py-3 px-lg-5 my-5 mx-auto" style="background-color: #00706bcf;">
             <div class="text-center text-white" style=""font-family: '"Source Sans Pro",HelveticaNeue-Light,"Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;'>
