--- a/core/static/templates/core/profile.html
+++ b/core/static/templates/core/profile.html
@@ -62,6 +62,14 @@
                         </div>
                         <div class="col-sm-12 py-2">
                             <div class="form-group">
+                                <label class="form-label" for="email" required><b>Email:</b></label>
+                                <div class="input-group ">
+                                    <input class="form-control" type="email" name="email" id="email" value="{{userinfo.email}}">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 py-2">
+                            <div class="form-group">
                                 <label class="form-label" for="phone" required><b>Phone:</b></label>
                                 <div class="input-group ">
                                     <span class="input-group-text" id="basic-addon1" style="font-weight: 500;">+88</span>
@@ -69,6 +77,8 @@
                                 </div>
                             </div>
                         </div>
+                        
+                        
                         <div class="mt-3 text-center">
                             <button class="btn btn-warning profile-button" type="submit">Save Profile</button>
                         </div>
