batch, department, session setup

--- a/core/static/templates/core/base/base.html
+++ b/core/static/templates/core/base/base.html
@@ -105,9 +105,9 @@
                                 <div class="d-flex flex-column px-0 m-0">
                                     <a class="menulink bg-light border border-1 py-1 ps-4" href="{% url 'hall_list' %}" ><i class="bi bi-link-45deg"></i> Hall</a>
                                     <a class="menulink bg-light border border-1 py-1 ps-4" href="{% url 'room_list' %}" ><i class="bi bi-link-45deg"></i> Room</a>
-                                    {% comment %} <a class="menulink bg-light border border-1 py-1 ps-4" href="{% url 'batch_list' %}" ><i class="bi bi-link-45deg"></i> Batch</a>
+                                    <a class="menulink bg-light border border-1 py-1 ps-4" href="{% url 'batch_list' %}" ><i class="bi bi-link-45deg"></i> Batch</a>
                                     <a class="menulink bg-light border border-1 py-1 ps-4" href="{% url 'department_list' %}" ><i class="bi bi-link-45deg"></i> Department</a>
-                                    <a class="menulink bg-light border border-1 py-1 ps-4" href="{% url 'session_list' %}" ><i class="bi bi-link-45deg"></i> Session</a>  {% endcomment %}
+                                    <a class="menulink bg-light border border-1 py-1 ps-4" href="{% url 'session_list' %}" ><i class="bi bi-link-45deg"></i> Session</a> 
                                 </div>
                                 
                             </div>
