Search Filters added in setupviews

--- a/HallManagementApp/templates/batch/index.html
+++ b/HallManagementApp/templates/batch/index.html
@@ -10,6 +10,9 @@
 {% block body %}
 
 
+{% load crispy_forms_tags %}
+
+
     <section class="py-4 px-4">
 		<div class="row">
 			<div class="container col-sm-10">
