--- a/HallManagementApp/templates/hall/index.html
+++ b/HallManagementApp/templates/hall/index.html
@@ -9,6 +9,8 @@
 
 {% block body %}
 
+{% load crispy_forms_tags %}
+
 
     <section class="py-4 px-4">
 		<div class="row">
@@ -30,6 +32,26 @@
 						{% endif %}
                     {% endfor %}
                 {% endif %}
+
+
+
+                
+
+
+                <div class="alert alert-primary mt-3">
+                    <form id="HallListForm" method="POST" action="" class="">
+                        {% csrf_token %}
+                        <div class="row gx-3">
+                            <div class="col-sm-4  ">
+                                {{ form.hall|as_crispy_field }}
+                            </div>
+                            <div class="col-sm-4 ms-auto mt-auto">
+                                <input class="btn btn-primary" type="submit" id="searchBtn" value="Show" />
+                            </div>
+                        </div>
+                    </form>
+                </div>
+
 				
                 <div class="mt-3">
                     <table class="table table-bordered table-hover text-center">
@@ -41,7 +63,7 @@
                               </tr>
                         </thead>
                         <tbody>
-                          {% for data in dataset %}
+                          {% for data in halls %}
                             <tr>
                                 <th scope="row">{{forloop.counter}}</th>
                                 <td>{{data.name}}</td>
