--- a/HallManagementApp/templates/studentList1.html
+++ b/HallManagementApp/templates/studentList1.html
@@ -6,9 +6,9 @@
 
 {% block body %}
 
-<section class="py-4 px-4">
+<section class="py-3 px-4">
     <div class="row">
-        <div class="container col-sm-10">
+        <div class="container col-sm-12">
             <div class="pb-2 d-flex justify-content-center align-items-center border-bottom border-secondary border-2">
                 <h3 class="m-0 mx-2">Student List</h3>                    
             </div>
@@ -78,7 +78,7 @@
                             <th>Session</th>
                             <th>Hall</th>
                             <th>Room</th>
-                            <th scope="col" class="text-center">Action</th>
+                            <th class="text-center">Action</th>
                         </tr>
                     </thead>
                     <tbody>
