--- a/core/static/templates/studentfee/create.html
+++ b/core/static/templates/studentfee/create.html
@@ -1,7 +1,7 @@
 {% extends 'core/base/base.html' %}
 
 
-{% block title %}Create StudentFee{% endblock %}
+{% block title %}Generate Student Fee{% endblock %}
 
 
 {% block site_css %}{% endblock %}
@@ -14,7 +14,7 @@
 		<div class="row">
 			<div class="container col-sm-12">
                 <div class="pb-2 d-flex justify-content-center align-items-center border-bottom border-secondary border-2">
-					<h3 class="m-0 mx-2">Create Student Fee</h3>
+					<h3 class="m-0 mx-2">Generate Student Fee</h3>
 				</div>
 
                 {% if messages %}
