Update Semester Setup

--- a/core/static/templates/core/base/base.html
+++ b/core/static/templates/core/base/base.html
@@ -112,6 +112,7 @@
                                     <a class="menulink bg-light border border-1 py-1 ps-4" href="{% url 'batch_list' %}" ><i class="bi bi-link-45deg"></i> Batch</a>
                                     <a class="menulink bg-light border border-1 py-1 ps-4" href="{% url 'department_list' %}" ><i class="bi bi-link-45deg"></i> Department</a>
                                     <a class="menulink bg-light border border-1 py-1 ps-4" href="{% url 'session_list' %}" ><i class="bi bi-link-45deg"></i> Session</a> 
+                                    <a class="menulink bg-light border border-1 py-1 ps-4" href="{% url 'semester_list' %}" ><i class="bi bi-link-45deg"></i> semester</a> 
                                 </div>
                                 
                             </div>
