--- a/core/static/templates/studentfee/index.html
+++ b/core/static/templates/studentfee/index.html
@@ -32,19 +32,19 @@
                 <form id="StudentFeeForm" method="POST" action="" class="">
                     {% csrf_token %}
                     <div class="row gx-3">
-                        <div class="col-sm-4 ">
+                        <div class="col-sm-3 ">
                             {{ form.feesHead|as_crispy_field }}
                         </div>
-                        <div class="col-sm-4  ">
+                        <div class="col-sm-3  ">
                             {{ form.batch|as_crispy_field }}
                         </div>
-                        <div class="col-sm-4  ">
+                        <div class="col-sm-3  ">
                             {{ form.hall|as_crispy_field }}
                         </div>
-                        <div class="col-sm-4  ">
+                        <div class="col-sm-3  ">
                             {{ form.registration_number|as_crispy_field }}
                         </div>
-                        <div class="col-sm-4 ms-auto mt-auto">
+                        <div class="col-sm-3 ms-auto mt-auto">
                             <input class="btn btn-primary" type="submit" id="searchBtn" value="Show" />
                         </div>
                     </div>
@@ -52,12 +52,12 @@
             </div>
 
             <div class="mt-3">
-                <table class="table table-borderedtable-hover text-center" style="font-size:14px;">
+                <table class="table table-bordered table-hover text-center" style="font-size:14px;">
                     <thead class="table-light">
                         <tr>
                             <th scope="col">#</th> 
                             <th>Name</th>
-                            <th>Registration Number</th>
+                            <th>Registration No.</th>
                             <th>Batch</th>
                             <th>Department</th>
                             <th>Session</th>
@@ -65,6 +65,7 @@
                             <th>Room</th>
                             <th>FeesHead</th>
                             <th>Amount</th>
+                            <th>Fee Status</th>
                             <th scope="col" class="text-center">Action</th>
                         </tr>
                     </thead>
@@ -81,6 +82,7 @@
                             <td>{{ studentfee.student.room.name }}</td>
                             <td>{{ studentfee.feeshead }}</td>
                             <td>{{ studentfee.amount }}</td>
+                            <td>{{ studentfee.paymentStatus.name }}</td>
                             <td class="text-center">
                                 {% comment %} 
                                 <a class="btn btn-sm btn-info" href="{% url 'edit_student' student.id %}">Edit</a>
