--- a/core/static/templates/studentfee/index.html
+++ b/core/static/templates/studentfee/index.html
@@ -14,9 +14,9 @@
                 <h3 class="m-0 mx-2">Student Fee List</h3>                    
             </div>
 
-            <div class="mt-3">
+            {% comment %} <div class="mt-3">
                 <a class="btn btn-sm btn-primary" href="{% url 'generate_studentfee' %}">Create Student Fee</a>
-            </div>
+            </div> {% endcomment %}
 
             {% if messages %}
                 {% for message in messages %}
@@ -42,30 +42,36 @@
                             {{ form.hall|as_crispy_field }}
                         </div>
                         <div class="col-sm-3  ">
+                            {{ form.semester|as_crispy_field }}
+                        </div>
+                        <div class="col-sm-3  ">
                             {{ form.registration_number|as_crispy_field }}
                         </div>
-                        <div class="col-sm-3 ms-auto mt-auto">
-                            <input class="btn btn-primary" type="submit" id="searchBtn" value="Show" />
+                        <div class="col-sm-3 ms-auto my-auto">
+                            <input class="btn btn-sm btn-primary" type="submit" id="searchBtn" value="Show" />
                         </div>
                     </div>
                 </form>
             </div>
 
+            {% if studentfees %}
             <div class="mt-3">
-                <table class="table table-bordered table-hover text-center" style="font-size:14px;">
-                    <thead class="table-light">
+                <table class="table table-bordered table-hover text-center align-middle" style="font-size:14px;">
+                    <thead class="table-light align-middle">
                         <tr>
                             <th scope="col">#</th> 
-                            <th>Name</th>
-                            <th>Registration No.</th>
+                            <th class="text-start" style="width: 120px;">Student</th>
+                            <th>Reg. No.</th>
+                            <th>Session</th>
                             <th>Batch</th>
                             <th>Department</th>
-                            <th>Session</th>
-                            <th>Hall</th>
-                            <th>Room</th>
+                            <th>Status</th>
                             <th>FeesHead</th>
+                            <th>Semester</th>
                             <th>Amount</th>
                             <th>Fee Status</th>
+                            <th>Entry By</th>
+                            <th>Entry Date</th>
                             <th scope="col" class="text-center">Action</th>
                         </tr>
                     </thead>
@@ -73,32 +79,36 @@
                         {% for studentfee in studentfees %}
                         <tr>
                             <th scope="row">{{forloop.counter}}</th>
-                            <td>{{ studentfee.student.name }}</td>
-                            <td>{{ studentfee.student.registration_number }}</td>
+                            <td class="text-start">{{ studentfee.student.name }}</td>
+                            <td >{{ studentfee.student.registration_number }}</td>
+                            <td>{{ studentfee.student.session.name }}</td>
                             <td>{{ studentfee.student.batch.name }}</td>
                             <td>{{ studentfee.student.department.name }}</td>
-                            <td>{{ studentfee.student.session.name }}</td>
-                            <td>{{ studentfee.student.room.hall }}</td>
-                            <td>{{ studentfee.student.room.name }}</td>
-                            <td>{{ studentfee.feeshead }}</td>
+                            <td>{{ studentfee.student.get_status_display }}</td>
+                            <td>{{ studentfee.feeshead.title }}</td>
+                            <td>{{ studentfee.semester.name }}</td>
                             <td>{{ studentfee.amount }}</td>
                             <td>{{ studentfee.paymentStatus.name }}</td>
+                            <td>{{ studentfee.entryuser }}</td>
+                            <td>{{ studentfee.entryDate|date:"d/m/Y" }} {{ studentfee.entryDate|time:"h:i A" }}</td>
                             <td class="text-center">
                                 {% comment %} 
                                 <a class="btn btn-sm btn-info" href="{% url 'edit_student' student.id %}">Edit</a>
                                 {% endcomment %} 
-                                <form method="POST" class="d-inline" onsubmit="return confirm('Are you sure you want to delete?');" action="{% url 'delete_studentfee' %}">
-                                    {% csrf_token %}
-                                    <input type="decimal" value="{{studentfee.id}}" name="id" style="display:none;"/>
-                                    <button class="btn btn-sm btn-danger" type="submit" >Delete</button>
-                                </form>
+                                {% if studentfee.paymentStatus.name == 'UNPAID' %}
+                                    <form method="POST" class="d-inline" onsubmit="return confirm('Are you sure you want to delete?');" action="{% url 'delete_studentfee' %}">
+                                        {% csrf_token %}
+                                        <input type="decimal" value="{{studentfee.id}}" name="id" style="display:none;"/>
+                                        <button class="btn btn-sm btn-danger" type="submit" >Delete</button>
+                                    </form>
+                                {% endif %}
                             </td>   
                         </tr>
                         {% endfor %}
                     </tbody>
                 </table>
             </div>
-
+            {% endif %}
             <div class="">
                 <div class="col-md-12 text-left pt-2">
                     <a class="btn btn-success btn-sm" href="/home/">Back To Home</a>
